make pump fun program id configurable

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
 # Sample environment configuration for pumpfun_sniper
 HELIUS_WSS=wss://example.com/?api-key=YOUR_HELIUS_KEY
+PUMP_FUN_PROGRAM=Pump1111111111111111111111111111111111111111
 RUGCHECK_KEY=YOUR_RUGCHECK_KEY
 BIRDEYE_KEY=YOUR_BIRDEYE_KEY
 RPC_HTTP=https://api.mainnet-beta.solana.com
