Update pump.fun program address and use SQLite by default

--- a/.env.sample
+++ b/.env.sample
@@ -1,13 +1,14 @@
 # Sample environment configuration for pumpfun_sniper
 HELIUS_WSS=wss://example.com/?api-key=YOUR_HELIUS_KEY
-PUMP_FUN_PROGRAM=Pump1111111111111111111111111111111111111111
+PUMP_FUN_PROGRAM=pAMMuuM8QJRT48k8AKVdhcY7n8K9Q8QhQMXsKfSLVXd
 RUGCHECK_KEY=YOUR_RUGCHECK_KEY
 BIRDEYE_KEY=YOUR_BIRDEYE_KEY
 RPC_HTTP=https://api.mainnet-beta.solana.com
 MORALIS_KEY=
 BASE_WALLET=YOUR_WALLET
 KEYPAIR_PATH=/path/to/id.json
-DB_DSN=postgresql+asyncpg://user:pass@localhost/pumpfun_sniper
+#DB_DSN=postgresql+asyncpg://user:pass@localhost/pumpfun_sniper
+DB_DSN=sqlite+aiosqlite:///test.db
 BUY_SIZE_SOL=0.01
 SLIPPAGE_BPS=75
 JITO_TIP_LAMPORTS=2000000
